--- a/index.html
+++ b/index.html
@@ -1,78 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eco-Friendly Delivery: One Pedal at a Time</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body class="min-h-screen flex items-center justify-center p-4">
-    <div class="container max-w-md w-full rounded-xl shadow-2xl overflow-hidden">
-        <div class="bg-white bg-opacity-50 p-8">
-            <h1 class="text-4xl font-semibold mb-6 text-center text-green-900 leading-tight">Eco-Friendly Delivery: <br> One Pedal at a Time</h1>
-
-
-            <!-- Centered Logo Image -->
-            <div class="flex justify-center mb-6">
-                <img src="./logo.gif" alt="Eco-Delivery Logo" class="h-32 w-auto">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="iphone-pro-x">
+      <div class="div">
+        <div class="overlap">
+          <div class="ios-status-bar-black">
+            <div class="ios-status-bar-black-2">
+              <div class="right-side">
+                <img class="battery" src="https://c.animaapp.com/oj3GBcma/img/battery-1@2x.png" />
+                <img class="wifi" src="https://c.animaapp.com/oj3GBcma/img/wifi-1.svg" />
+                <img class="mobile-signal" src="https://c.animaapp.com/oj3GBcma/img/mobile-signal-1.svg" />
+              </div>
+              <img class="left-side" src="https://c.animaapp.com/oj3GBcma/img/left-side-1@2x.png" />
             </div>
-
-            <p class="text-lg text-center text-green-800 mb-6">
-              <span class="highlight-co2">🌱 Save CO2!</span> <br> By cycling instead of riding a gas-powered motorbike, you are planting virtual trees. 
-              <br><br>
-              <strong>Your small effort makes a <span class="highlight-number">big</span> difference for the planet!</strong>
-            </p>
-
-
-            <div class="mb-6 relative">
-                <label for="distance" class="block text-sm font-medium text-green-800 mb-2">Distance cycled (km):</label>
-                <input type="number" id="distance"
-                    class="w-full px-4 py-2 border-2 border-green-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-green-500 bg-white bg-opacity-70 transition-all duration-300">
-                <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
-                    <svg class="h-4 w-4 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M13 10V3L4 14h7v7l9-11h-7z" />
-                    </svg>
-                </div>
-            </div>
-            
-            <!-- Easy Buttons for Distance -->
-            <div class="flex justify-between mb-6">
-                <button class="distance-btn bg-green-200 text-green-900 py-2 px-4 rounded-lg hover:bg-green-300" data-distance="1">1 km</button>
-                <button class="distance-btn bg-green-200 text-green-900 py-2 px-4 rounded-lg hover:bg-green-300" data-distance="3">3 km</button>
-                <button class="distance-btn bg-green-200 text-green-900 py-2 px-4 rounded-lg hover:bg-green-300" data-distance="5">5 km</button>
-                <button class="distance-btn bg-green-200 text-green-900 py-2 px-4 rounded-lg hover:bg-green-300" data-distance="10">10 km</button>
-                <button class="distance-btn bg-green-200 text-green-900 py-2 px-4 rounded-lg hover:bg-green-300" data-distance="20">20 km</button>
-            </div>
-
-            <button id="calculateButton"
-                class="w-full bg-green-600 text-white py-3 px-4 rounded-lg hover:bg-green-700 transition duration-300 font-medium shadow-md hover:shadow-lg transform hover:-translate-y-1">Calculate</button>
-            <!-- Add this new div for initial status -->
-            <br><br>
-            <div id="initialStatus" class="mb-6 text-center text-green-800"></div>
-
-            <div id="result" class="mt-6 text-green-900 sparkle-container"></div>
+          </div>
+          <div class="rectangle"></div>
+          <div class="text-wrapper">Home</div>
+          <div class="text-wrapper-2">Johar Town Lahore</div>
+          <img class="align-justify" src="https://c.animaapp.com/oj3GBcma/img/align-justify.svg" />
+          <a href="profile/index.html">
+            <img class="heart" src="./profile/user-128.svg" />
+          </a>
+          <img class="cart-arrow-down" src="https://c.animaapp.com/oj3GBcma/img/cart-arrow-down.svg"  />
         </div>
+        <div class="text-wrapper-3">Good Evening, Mehroz</div>
+        <div class="text-wrapper-4">Your Restaurants</div>
+        <div class="text-wrapper-5">Subway - Lahore</div>
+        <div class="text-wrapper-6">Broadway Pizza-</div>
+        <div class="text-wrapper-7">PKR 60 delivery fee</div>
+        <div class="text-wrapper-8">PKR 60 delivery fee</div>
+        <div class="text-wrapper-9">Fast Food,American,Meat,Halal</div>
+        <div class="text-wrapper-10">Fast Food,American.</div>
+        <p class="what-s-for-dinner">What’s for dinner?There are 567<br />restaurants in your area</p>
+        <div class="overlap-group">
+          <img class="search" src="https://c.animaapp.com/oj3GBcma/img/search.svg" />
+          <p class="search-for-shops">Search for shops &amp; restaurants</p>
+        </div>
+        <div class="overlap-2">
+          <div class="rectangle-2"></div>
+          <div class="text-wrapper-11">Food delivery</div>
+          <div class="text-wrapper-12">Order food you love</div>
+          <img
+            class="atikah-akhtar"
+            src="https://c.animaapp.com/oj3GBcma/img/atikah-akhtar-didqp3humxq-unsplash-removebg-preview-1@2x.png"
+          />
+        </div>
+        <img
+          class="tim-toomey"
+          src="https://c.animaapp.com/oj3GBcma/img/tim-toomey-pe9dvm1rqkm-unsplash-removebg-preview-1@2x.png"
+        />
+        <div class="overlap-3">
+          <div class="text-wrapper-13">pandamart</div>
+          <p class="everyday-up-to">
+            Everyday up to<br />
+            20% off
+          </p>
+          <img
+            class="PNG-image-removebg"
+            src="https://c.animaapp.com/oj3GBcma/img/png-image-removebg-preview-1@2x.png"
+          />
+        </div>
+        <div class="overlap-4">
+          <div class="overlap-5">
+            <a href="./templates/index_new.html"><div class="text-wrapper-14">Pick-Up</div></a>
+            <p class="p">
+              Everyday up to<br />
+              25% off
+            </p>
+          </div>
+          <img
+            class="mel-chipfakacha-slj"
+            src="https://c.animaapp.com/oj3GBcma/img/mel-chipfakacha-slj-atkfsw4-unsplash-removebg-preview-1@2x.png"
+          />
+        </div>
+        <div class="overlap-6">
+          <div class="rectangle-3"></div>
+          <div class="text-wrapper-15">Shops</div>
+          <div class="grocery-more">Grocery &amp; more..</div>
+          <img
+            class="maria-lin-kim"
+            src="https://c.animaapp.com/oj3GBcma/img/maria-lin-kim-8raued8zd-u-unsplash-removebg-preview-1@2x.png"
+          />
+        </div>
+        <div class="overlap-group-2">
+          <img class="img" src="https://c.animaapp.com/oj3GBcma/img/rectangle-7.svg" />
+          <div class="rectangle-4"></div>
+          <div class="text-wrapper-16">30 min</div>
+          <div class="rectangle-5"></div>
+          <div class="text-wrapper-17">Food Fest Deals</div>
+        </div>
+        <div class="overlap-7">
+          <div class="div-wrapper"><div class="text-wrapper-18">30 min</div></div>
+          <div class="overlap-8"><div class="text-wrapper-19">Food Fest Deals</div></div>
+        </div>
+      </div>
     </div>
-
-    <script src="data.js"></script>
-    <script src="utilities.js"></script>
-    <script type="module" src="script.js"></script>
-    <script type="module" src="co2Calculations.js"></script>
-
-    <script>
-        // Add event listeners to the easy distance buttons
-        document.querySelectorAll('.distance-btn').forEach(button => {
-            button.addEventListener('click', () => {
-                const distance = button.getAttribute('data-distance');
-                document.getElementById('distance').value = distance;
-            });
-        });
-    </script>
-</body>
-
+  </body>
 </html>
