add: keyword walking

--- a/profile/index.html
+++ b/profile/index.html
@@ -22,14 +22,14 @@
             </div>
 
             <p class="text-lg text-center text-green-800 mb-6">
-              <span class="highlight-co2">🌱 Save CO2!</span> <br> By cycling instead of riding a gas-powered motorbike, you are planting virtual trees. 
+              <span class="highlight-co2">🌱 Save CO2!</span> <br> By cycling or walking instead of riding a gas-powered motorbike, you are planting virtual leaves. 
               <br><br>
               <strong>Your small effort makes a <span class="highlight-number">big</span> difference for the planet!</strong>
             </p>
 
 
             <div class="mb-6 relative">
-                <label for="distance" class="block text-sm font-medium text-green-800 mb-2">Distance cycled (km):</label>
+                <label for="distance" class="block text-sm font-medium text-green-800 mb-2">Distance cycled or walked (km):</label>
                 <input type="number" id="distance"
                     class="w-full px-4 py-2 border-2 border-green-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-green-500 bg-white bg-opacity-70 transition-all duration-300">
                 <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
